--- a/authentication/templates/account_activation_email.html
+++ b/authentication/templates/account_activation_email.html
@@ -1,9 +1,9 @@
 {% extends 'base_email.html' %}
 {% block content %}
-    Hi <strong>{{ user.first_name }}</strong>,
+    Hi <strong>{{ first_name }}</strong>,
     <br><br>
 
-    You're receiving this email because you requested a password reset for your account.
+    You're receiving this email because you can now activate your user account.
     <br><br>
 
     Please go to the following page and choose a new password:
@@ -20,10 +20,10 @@
               font-size: 16px;
               cursor: pointer;
               border-radius: 4px;">
-        Click here to reset your password
+        Click here to set your password
     </a>
     <br><br>
 
-    Your username, in case you’ve forgotten: <strong>{{ user.username }}</strong>
+    Your username, in case you’ve forgotten: <strong>{{ username }}</strong>
     <br><br>
 {% endblock content %}
